--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches:
       - main
-    types: [closed] #요거 synchronize 옵션 확인 필요. 만약 pr 후 커밋이 추가됐을때 버전이 두단계 올라가면 삭제 필요
+    types: [closed]
 
 jobs:
   tag:
@@ -20,13 +20,18 @@ jobs:
       - name: Get Latest Tag
         id: get_tag
         run: |
-          TAG=$(git tag --sort=-v:refname | head -n 1 || echo "v0.0.0")
+          # 최신 태그가 있으면 가져오고, 없으면 "v0.0.0"을 기본값으로 설정
+          TAG=$(git tag --sort=-v:refname | head -n 1)
+          if [ -z "$TAG" ]; then
+            TAG="v0.0.0"
+          fi
           echo "LATEST_TAG=$TAG" >> $GITHUB_ENV
 
       - name: Bump Version
         id: bump_version
         run: |
           OLD_TAG=${{ env.LATEST_TAG }}
+          # 기존 태그가 "v"로 시작한다고 가정하고, 버전을 증가
           VERSION=$(echo $OLD_TAG | sed 's/v//' | awk -F. '{print $1"."$2"."$3+1}')
           NEW_TAG="v$VERSION"
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
