--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -35,15 +35,15 @@ jobs:
           PR_TAG=$(git log -1 --pretty=%B | grep -oP "(?<=#)(feature|bugfix|breaking)/\S+")
 
           # Check for feature, bugfix, or breaking tags to determine version increment
-          if [[ "$PR_TAG" == *"breaking/"* ]]; then
+          if [[ "$PR_TAG" == *"major/"* ]]; then
             # Increase MAJOR version
             OLD_TAG=${{ env.LATEST_TAG }}
             VERSION=$(echo $OLD_TAG | sed 's/v//' | awk -F. '{print $1+1".0.0"}')
-          elif [[ "$PR_TAG" == *"feature/"* ]]; then
+          elif [[ "$PR_TAG" == *"minor/"* ]]; then
             # Increase MINOR version
             OLD_TAG=${{ env.LATEST_TAG }}
             VERSION=$(echo $OLD_TAG | sed 's/v//' | awk -F. '{print $1"."$2+1".0"}')
-          elif [[ "$PR_TAG" == *"bugfix/"* ]]; then
+          elif [[ "$PR_TAG" == *"patch/"* ]]; then
             # Increase PATCH version
             OLD_TAG=${{ env.LATEST_TAG }}
             VERSION=$(echo $OLD_TAG | sed 's/v//' | awk -F. '{print $1"."$2"."$3+1}')
